--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h3 {
 }
 
 body {
-    background-image: url(images/background.png);
+    background-image: url("images/background.png");
     background-attachment: fixed;
 }
 
