--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,34 @@
     font-family: Arial, sans-serif;
 }
 
-h1,
+h1 {
+    font: normal 2.5em "Share Tech", Arial, sans-serif;
+}
+
 h2,
-h3 {
+h3,
+h4 {
     font-family: "Share Tech", Arial, sans-serif;
     margin-left: 3%;
+}
+
+h2 {
+    margin-top: 3.5em;
+    margin-bottom: 1.5em;
+    font-size: 2.2em;
+}
+
+h3 {
+    margin-top: 2em;
+    margin-bottom: 0.5em;
+    font-size: 1.8em;
 }
 
 body {
     background-image: url("images/background.png");
     background-attachment: fixed;
+    padding-bottom: 10em;
+    background-size: 100%;
 }
 
 p {
@@ -40,7 +58,7 @@ p {
     position: fixed;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:space-between;
     align-items: center;
 
     top: 0;
@@ -48,6 +66,16 @@ p {
     right: 0;
 
     background-color: rgb(245, 243, 243);
+
+    /* z -index highest so no elements on the webpage stack on top of this when scrolling */
+    z-index: 7;
+}
+
+
+#header-left {
+    overflow: hidden;
+    flex-wrap: nowrap;
+    flex-shrink: 0;    
 }
 
 #header-js-icon {
@@ -56,14 +84,8 @@ p {
     vertical-align: bottom;
 }
 
-#header-left {
-    overflow: hidden;
-    flex-wrap: nowrap;
-    flex-shrink: 0;
-}
-
 .header-title {
-    font-size: 2.5em;
+    /* font-size: 2.5em; */
     color: black;
     display: inline;
     margin: 0;
@@ -75,27 +97,35 @@ p {
     .header-title {
         display: none;
     }
-
 }
 
 #header-right {
-    line-height: 2;
+    flex: 1;
+}
+
+.nav-list {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1.5em;
+    flex-direction: row;
+    align-items:center;
+    justify-content:space-between;
     flex-wrap: wrap;
+    gap: 1em;
+    list-style: none;
+}
+
+#website-header li {
+    display: inline;
+    /* padding: 0.5em 1em; */
 }
 
 .header-navigation-link {
     font-family: "Share Tech", Arial, sans-serif;
-    padding-left: 1em;
-    padding-right: 1em;
     text-decoration: none;
     color: rgb(99, 107, 116);
     transition-duration: 0.2s;
     /* this ensures each navigation link stays on the same line and doesn't wrap */
     white-space: nowrap;
+    padding: 0.5em 1em;
 }
 
 .header-navigation-link:hover {
@@ -108,13 +138,7 @@ p {
 
 /* CONTENT */
 
-/* this ensures the content does not overlap with the fixed header  */
-.page-title {
-    margin-top: 5em;
-    margin-bottom: 1.5em;
-    font-size: 2em;
-}
-
+/* index page  */
 #get-started {
     font-family: "Share Tech", Arial, sans-serif;
     background-color: lightgreen;
@@ -133,14 +157,133 @@ p {
     opacity: 0.8;
 }
 
-#get-started:hover{
+#get-started:hover {
     font-family: "Share Tech", Arial, sans-serif;
     cursor: pointer;
     opacity: 1;
     transition-duration: 0.2s;
 }
 
-/* footer  */
+/* topic page */
+#history-summary {
+    border: 2px solid rgb(99, 107, 116);;
+    text-align: left;
+    float: right;
+    margin: 0 3%;
+    padding: 1em;
+    background-color: white;
+    opacity: 0.8;
+
+}
+
+#quick-summary-heading {
+    font-size: 1.2em;
+    padding-bottom: 0.5em;
+}
+
+dl {
+    line-height: 1.5em;
+
+}
+dt {
+    font-weight: bold;
+}
+
+
+
+#fig1 {
+    border: 1px solid black;
+    float: left;
+    width: 20%;
+    margin: 1em 2em;
+    text-align: center;
+}
+
+
+#fig1-image {
+    width: 100%;
+}
+
+#fig2 {
+    border: 1px solid black;
+    width: 40%;
+    margin: 1em auto;
+    text-align: center;
+}
+
+
+#fig2-image {
+    width: 100%;
+}
+
+ol {
+    line-height: 2em;
+    margin-left: 3%;
+    margin-right: 3%;
+    list-style-type: disc;
+}
+
+ul {
+    line-height: 2em;
+    margin-left: 5%;
+    margin-right: 3%;
+    list-style-type: disc;
+
+}
+
+.date {
+    font-weight: bold;
+}
+
+aside {
+    width: 30%;
+    display: block;
+    float: right;
+
+    border: 5px lightgreen outset;
+    border-radius: 0.5em;
+    background-color: white;
+    box-shadow: 5px 5px 10px;
+    padding: 1em;
+    opacity: 0.8;
+    margin: 2em;
+    
+    line-height: 3em;
+    color: rgb(99, 107, 116);
+    font-size: 0.9em;
+    font-style: italic;
+    
+}
+
+#table {
+    text-align: center;
+    margin: 1em;
+}
+
+table {
+    border: 1px solid;
+    width: 80%;
+    margin-left: 20%;
+    margin: 1em auto;
+}
+
+th {
+    background-color: white;
+    width: 25%;
+    padding: 0.5em;
+}
+
+td {
+    background-color: rgb(245, 243, 243);
+    margin: 0.5em;
+    padding: 0.5em;
+}
+
+.table-top-row {
+    font-size: 1.5em;
+}
+
+/* FOOTER  */
 
 #website-footer {
     font-family: "Share Tech", Arial, sans-serif;
@@ -186,7 +329,7 @@ p {
     position: absolute;
     z-index: 1;
     bottom: 120%;
-    right: 0%; 
+    right: 0%;
     white-space: nowrap;
     opacity: 0;
     transition: opacity 1s;
