--- a/css/style.css
+++ b/css/style.css
@@ -6,25 +6,21 @@
     font-family: Arial, sans-serif;
 }
 
-h1 {
-    font: normal 2.5em "Share Tech", Arial, sans-serif;
-}
-
+h1,
 h2,
-h3,
-h4 {
+h3 {
     font-family: "Share Tech", Arial, sans-serif;
     margin-left: 3%;
 }
 
 /* this code is used so the content does not overlap the fixed header */
-h2 {
+h1 {
     margin-top: 3.5em;
     margin-bottom: 1.5em;
     font-size: 2.2em;
 }
 
-h3 {
+h2 {
     margin-top: 2em;
     margin-bottom: 0.5em;
     font-size: 1.8em;
@@ -82,6 +78,10 @@ p {
     overflow: hidden;
     flex-wrap: nowrap;
     flex-shrink: 0;    
+}
+
+header p {
+    font: normal 2.5em "Share Tech", Arial, sans-serif;
 }
 
 #header-js-icon {
@@ -279,52 +279,6 @@ td {
 
 .table-top-row {
     font-size: 1.5em;
-}
-/* quiz page */
-#title_box {
-    font-style: italic;
-}
-
-#student-details-fieldset {
-    margin: 3%;
-    padding: 1em;
-}
-
-.stu_details {
-    font: normal 1.5em "Share Tech", Arial, sans-serif;
-}
-
-.question {
-    margin-left: 3%;
-    margin-bottom: 1em;
-}
-
-/* this overrides the general p css formatting with a margin */
-.question p {
-    margin: 0em;
-}
-
-#submit_button {
-    /* font-family: "Share Tech", Arial, sans-serif; */
-    background-color: lightgreen;
-    border: 2px solid;
-    padding: 1em;
-    font-size: 1em;
-    border-radius: 1em;
-    color: black;
-    text-align: center;
-    display: inline-block;
-
-    margin-left: 3%;
-    box-shadow: 5px 5px 10px;
-    text-decoration: none;
-    opacity: 0.8;
-}
-
-#submit_button:hover {
-    cursor: pointer;
-    opacity: 1;
-    transition-duration: 0.2s;
 }
 
 /* enhancements page */
