--- a/assign2/styles/style.css
+++ b/assign2/styles/style.css
@@ -353,3 +353,10 @@ code {
     visibility: visible;
     opacity: 1;
 }
+
+/* quiz validation */
+#congratulationsMessage {
+    font-family: "Share Tech", Arial, sans-serif;
+    font-size: 3em;
+    
+}
